@@ -177,10 +177,9 @@ private:
 class ACE_ETCL_Export ETCL_Union_Value : public ETCL_Constraint
 {
 public:
-  ETCL_Union_Value (void);
   ETCL_Union_Value (int sign,
                     ETCL_Constraint *integer);
-  ETCL_Union_Value (ETCL_Constraint *string);
+  explicit ETCL_Union_Value (ETCL_Constraint *string = 0);
   virtual ~ETCL_Union_Value (void);
 
   int sign (void) const;
@@ -198,9 +197,8 @@ private:
 class ACE_ETCL_Export ETCL_Union_Pos : public ETCL_Constraint
 {
 public:
-  ETCL_Union_Pos (void);
-  ETCL_Union_Pos (ETCL_Constraint *union_value,
-                  ETCL_Constraint *component);
+  ETCL_Union_Pos (ETCL_Constraint *union_value = 0,
+                  ETCL_Constraint *component = 0);
   virtual ~ETCL_Union_Pos (void);
 
   ETCL_Union_Value *union_value (void) const;
@@ -216,9 +214,8 @@ private:
 class ACE_ETCL_Export ETCL_Component_Pos : public ETCL_Constraint
 {
 public:
-  ETCL_Component_Pos (void);
-  ETCL_Component_Pos (ETCL_Constraint *integer,
-                      ETCL_Constraint *component);
+  ETCL_Component_Pos (ETCL_Constraint *integer = 0,
+                      ETCL_Constraint *component = 0);
   virtual ~ETCL_Component_Pos (void);
 
   ETCL_Literal_Constraint *integer (void) const;
@@ -234,9 +231,8 @@ private:
 class ACE_ETCL_Export ETCL_Component_Assoc : public ETCL_Constraint
 {
 public:
-  ETCL_Component_Assoc (void);
-  ETCL_Component_Assoc (ETCL_Constraint *identifier,
-                        ETCL_Constraint *component);
+  ETCL_Component_Assoc (ETCL_Constraint *identifier = 0,
+                        ETCL_Constraint *component = 0);
   virtual ~ETCL_Component_Assoc (void);
 
   ETCL_Identifier *identifier (void) const;
@@ -252,9 +248,8 @@ private:
 class ACE_ETCL_Export ETCL_Component_Array : public ETCL_Constraint
 {
 public:
-  ETCL_Component_Array (void);
-  ETCL_Component_Array (ETCL_Constraint *integer,
-                        ETCL_Constraint *component);
+  ETCL_Component_Array (ETCL_Constraint *integer = 0,
+                        ETCL_Constraint *component = 0);
   virtual ~ETCL_Component_Array (void);
 
   ETCL_Literal_Constraint *integer (void) const;
@@ -285,9 +280,8 @@ private:
 class ACE_ETCL_Export ETCL_Component : public ETCL_Constraint
 {
 public:
-  ETCL_Component (void);
-  ETCL_Component (ETCL_Constraint *identifier,
-                  ETCL_Constraint *component);
+  ETCL_Component (ETCL_Constraint *identifier = 0,
+                  ETCL_Constraint *component = 0);
   virtual ~ETCL_Component (void);
 
   ETCL_Identifier *identifier (void) const;
@@ -303,8 +297,7 @@ private:
 class ACE_ETCL_Export ETCL_Dot : public ETCL_Constraint
 {
 public:
-  ETCL_Dot (void);
-  ETCL_Dot (ETCL_Constraint *component);
+  explicit ETCL_Dot (ETCL_Constraint *component = 0);
   virtual ~ETCL_Dot (void);
 
   ETCL_Constraint *component (void) const;
@@ -318,8 +311,7 @@ private:
 class ACE_ETCL_Export ETCL_Eval : public ETCL_Constraint
 {
 public:
-  ETCL_Eval (void);
-  ETCL_Eval (ETCL_Constraint *component);
+  explicit ETCL_Eval (ETCL_Constraint *component = 0);
   virtual ~ETCL_Eval (void);
 
   ETCL_Constraint *component (void) const;
@@ -333,8 +325,7 @@ private:
 class ACE_ETCL_Export ETCL_Default : public ETCL_Constraint
 {
 public:
-  ETCL_Default (void);
-  ETCL_Default (ETCL_Constraint *component);
+  explicit ETCL_Default (ETCL_Constraint *component = 0);
   virtual ~ETCL_Default (void);
 
   ETCL_Constraint *component (void) const;
@@ -348,8 +339,7 @@ private:
 class ACE_ETCL_Export ETCL_Exist : public ETCL_Constraint
 {
 public:
-  ETCL_Exist (void);
-  ETCL_Exist (ETCL_Constraint *component);
+  explicit ETCL_Exist (ETCL_Constraint *component = 0);
   virtual ~ETCL_Exist (void);
 
   ETCL_Constraint *component (void) const;
