@@ -1,3 +1,9 @@
+Sun May  8 17:57:50 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/ETCL/ETCL_Constraint.h:
+        * ace/ETCL/ETCL_Constraint.inl:
+          Fixed coverity errors
+
 Thu May  5 21:38:45 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * ace/Select_Reactor_T.cpp:
